# owid-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml
owid/: __init__.py  creator.py  crypto.py  endpoints.py  error.py  io.py  owid.py  version.py
tests/: __init__.py  fixtures.py  test_creator.py  test_crypto.py  test_endpoints.py  test_io.py  test_owid.py
