[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "owid"
version = "0.1.0"
description = "Simple cryptographically auditable identifiers and processors (OWID)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "51 Degrees Mobile Experts Limited", email = "support@51degrees.com" },
]
keywords = ["owid", "ecdsa", "p-256", "signature", "swan"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "cryptography>=41",
]

[project.urls]
Homepage = "https://github.com/SWAN-community/owid"

[tool.setuptools.packages.find]
include = ["owid*"]
